--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,21 +6,21 @@
       <mat-card class="example-card">
         <img src="https://palrsa.palpensions.com/images/login.png" alt="login">
         <mat-card-actions>
-          <a routerLink="/form"><button mat-raised-button color="primary">LOGIN</button></a>
+          <a routerLink="/form"><button mat-raised-button color="primary">ورود</button></a>
         </mat-card-actions>
       </mat-card>
 
       <mat-card class="example-card">
         <img src="https://static05.cminds.com/wp-content/uploads/computer-1331579_1280-1-300x300.png" alt="users">
         <mat-card-actions>
-          <a routerLink="/users"><button mat-raised-button color="primary">USERS</button></a>
+          <a routerLink="/users"><button mat-raised-button color="primary">کاربران</button></a>
         </mat-card-actions>
       </mat-card>
 
       <mat-card class="example-card">
         <img src="https://d33v4339jhl8k0.cloudfront.net/docs/assets/55e7171d90336027d77078f6/images/5a75c4a22c7d3a4a4198c56a/file-Og6PGLfTD5.png" alt="comments">
         <mat-card-actions>
-          <a routerLink="/posts"><button mat-raised-button color="primary">POSTS</button></a>
+          <a routerLink="/posts"><button mat-raised-button color="primary">پست ها</button></a> 
         </mat-card-actions>
       </mat-card>
 
