--- a/src/app/user/user-list/user-list.component.css
+++ b/src/app/user/user-list/user-list.component.css
@@ -1,12 +1,13 @@
 .mat-card {
     width: 400px;
-    height: 650px;
+    height: 800px;
     margin-top: 30px;
     margin-left: 10px;
     margin-right: 10px;
     box-shadow: 10px 10px 10px grey;
     border: 0.1px solid black;
     margin-bottom: 30px;
+    border: 1px solid black;    
   }
 
 .container {
