--- a/src/app/components/post/post-list/post-list.component.css
+++ b/src/app/components/post/post-list/post-list.component.css
@@ -1,14 +1,15 @@
+.container {
+    background-color: rgb(192, 188, 188);
+}
+
 mat-grid-list {
     margin-top: 80px;
     background-color: rgb(228, 225, 225);
     box-shadow: 10px 10px 10px grey;
-    border: 1px solid black;
 }
 
 .body {
     background-color: white;
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
 }
 
 .body p {
@@ -22,9 +23,9 @@ mat-grid-list {
 }
 
 .button {
-    background-color: rgb(228, 225, 225);
+    background: white;
     color: rgb(77, 109, 216);
-    border-radius: 50%;
+    border-radius: 50%
 }
 
 .title h6 {
@@ -34,7 +35,6 @@ mat-grid-list {
 .userName {
     background-color: white;
     background-color: rgb(192, 188, 188);
-    border-left: 1px solid black;
 }
 
 .userName h6 {
@@ -43,9 +43,10 @@ mat-grid-list {
 
 .condition {
     background-color: rgb(192, 188, 188);
-    border-right: 1px solid black;
 }
 
 .condition h6 {
     text-decoration: underline;
 }
+
+
