--- a/src/app/components/post/post-detail/post-detail.component.html
+++ b/src/app/components/post/post-detail/post-detail.component.html
@@ -1,91 +1,53 @@
-<div class="container" dir="rtl" *ngFor="let post of post">
+<div class="container" dir="rtl" *ngFor = "let post of post">
 
-  <!-- the grid list main body -->
-  <mat-grid-list cols="20" rowHeight = "50px" *ngIf="post.id == href.id">
+    <div class="row" *ngIf="post.id == href.id">
 
-      <!-- post title -->
-      <mat-grid-tile [colspan] = "7"[rowspan] = "1" class="title">
-        <h6>{{post.title}}</h6>
-      </mat-grid-tile>
+        <!-- profile section -->
+        <div class="col-sm-3" style="border: 1px solid black">
 
-      <!-- post body -->
-      <mat-grid-tile [colspan] = "20"[rowspan] = "4" class="body">
-        <p>{{post.body}}</p>
-      </mat-grid-tile>
+            <div *ngFor="let user of user">
+                <div *ngIf="post.userId == user.id" class="profile">
+                        <img src="{{user.avatar}}">
+                        <p><label>نام : </label>{{user.name}}</p>
+                        <p><label>پست الکترونیک : </label>{{user.email}}</p>
+                        <p><label>وب سایت : </label>{{user.website}}</p>
+                        <p><label>شرکت : </label>{{user.company}}</p>
+                    </div>
+                </div>
 
-      <!-- post author name -->
-      <mat-grid-tile [colspan] = "3"[rowspan] = "1" class="userName">
-          <a *ngFor="let user of user"><h6 *ngIf="post.userId == user.id">{{user.name}}</h6></a>
-      </mat-grid-tile>
- 
-      <!-- the empty section -->
-      <mat-grid-tile [colspan] = "14"[rowspan] = "1"></mat-grid-tile>
+            </div>
 
-      <!-- the like button -->
-      <mat-grid-tile [colspan] = "1"[rowspan] = "1" class="button">
-          <button mat-icon-button (click)="increment()">
-            <mat-icon>thumb_up</mat-icon>
-          </button>
-        </mat-grid-tile>
-  
-        <!-- the like counter section -->
-        <mat-grid-tile [colspan] = "1"[rowspan] = "1">{{counter}}</mat-grid-tile>
-  
-        <!-- the dislike button -->
-        <mat-grid-tile [colspan] = "1"[rowspan] = "1" class="button">
-            <button mat-icon-button (click)="decrement()">
-              <mat-icon>thumb_down</mat-icon>
-            </button>
-        </mat-grid-tile>
+        <!-- comments section -->
+        <div class="col-sm-8 comment" style="border: 1px solid black">
 
-        <!-- the empty espace -->
-        <mat-grid-tile [colspan] = "20"[rowspan] = "2" class="emptySpace"></mat-grid-tile>
+            <div *ngFor="let user of user" class="postSection">
+                <div *ngIf="post.userId == user.id">
+                    <p class="title">{{post.title}}</p>
+                    </div>
+                <div *ngIf="post.userId == user.id">
+                        <p class="body">{{post.body}}</p>
+                        </div>
+                <div *ngIf="post.userId == user.id" class="like">
+                        <p class="name">{{user.name}}</p>
+                        <button (click) = "increment()">like</button><button (click) = "decrement()">dislike</button>
+                    </div>
+                </div>
+                
+            <p style="text-align:center;margin-top: 40px" >نظرات(۵)</p>
 
-        <!-- counter for condtions -->
-        <mat-grid-tile [colspan] = "20"[rowspan] = "1" style="border: 1px solid black">
-          <h5>نظرات(۵)</h5>
-        </mat-grid-tile>
+            <div *ngFor="let comment of comment" class="commentSection">
+                <div *ngIf="href.id == comment.postId">
+                        <img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png" style="height: 40px; width: 40px;margin-left:700px;">
+                        <p style="text-align: right;margin-top: 20px;">{{comment.name}}</p>
+                        <p style="text-align: center">{{comment.body}}</p>
+                        <p>{{comment.email}}</p>
+                    </div>
+                    
+                </div>
 
-        <!-- div for counting the post comments -->
-        <div *ngFor="let comment of comment">
-          
-          <!-- the comment's author -->
-          <mat-grid-tile [colspan] = "20"[rowspan] = "1" class="commentAuthor" *ngIf="post.userId == comment.postId">
-          <h6 style="margin-left: 500px;">{{comment.name}}</h6>
-          </mat-grid-tile>
-
-          <!-- comment's author email -->
-          <mat-grid-tile [colspan] = "20"[rowspan] = "1" *ngIf="post.userId == comment.postId" class="commentEamil">
-            <h6>{{comment.email}}</h6>
-          </mat-grid-tile>
-          
-          <!-- comment' body -->
-          <mat-grid-tile [colspan] = "20"[rowspan] = "1" class="commentBody" *ngIf="post.userId == comment.postId">
-            <h6>{{comment.body}}</h6>
-          </mat-grid-tile>
+            </div>
 
         </div>
 
-        <!-- condition title -->
-        <mat-grid-tile [colspan] = "20"[rowspan] = "1" style="border: 1px solid black"><h5>ارسال نظر</h5></mat-grid-tile>
+    </div>
 
-        <!-- form name title -->
-        <mat-grid-tile [colspan] = "20"[rowspan] = "1" style="border: 1px solid black">
-          <label style="margin-left: 80px"> نام :  </label>
-          <input type="text" style="margin-left: 150px" size="35">
-        </mat-grid-tile>
-
-        <!-- form email -->
-        <mat-grid-tile [colspan] = "20"[rowspan] = "1" style="border: 1px solid black">
-          <label> پست الکترونیک :  </label>
-          <input type="text" style="margin-left: 150px" size="35">
-        </mat-grid-tile>
-
-        <!-- form site -->
-        <mat-grid-tile [colspan] = "20"[rowspan] = "1" style="border: 1px solid black;">
-          <label style="margin-left: 10px"> سایت یا وبلاگ :   </label>
-          <input type="text" style="margin-left: 150px" size="35">
-        </mat-grid-tile>
-
-  </mat-grid-list>
-</div>
